fix(swarm): optimised the spacing and media queries for the swarm header, also removed the offset from the ring generator and put the buttons outside the pages to allow for better pagination system

--- a/app/client/stylesheets/components/pu-explorer.sass
+++ b/app/client/stylesheets/components/pu-explorer.sass
@@ -50,7 +50,6 @@
         li
             font-weight: bold
             font-family: $font-secondary
-            font-size: 12px
             color: rgba(255,255,255,0.80)
             line-height: 21px
 
@@ -70,11 +69,11 @@
         padding-bottom: 10px
         display: none
 
-    @media screen and (min-width: $breakpoint-desktop) and (min-height: $breakpoint-tablet + 1px)
-        padding: 60px 0px 120px 0px
+    @media screen and (min-width: $breakpoint-desktop) and (min-height: $breakpoint-tablet - 100px)
+        padding: 4vh 0px 8vh 0px
 
         header
-            margin-top: 60px
+            margin-top: 4vh
             margin-bottom: 0
 
             ul
@@ -84,18 +83,4 @@
 
         footer
             display: block
-            padding-bottom: 90px
-
-//     @media screen and (min-width: $breakpoint-tablet)
-
-//         header
-//             figure
-//                 h1
-//                     font-size: 40px
-
-//             ul
-//                 margin-top: 35px
-
-//             li
-//                 font-size: 15px
-
+            padding-bottom: 4vh
